branch/develop/owncloud/referencegrant.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: ReferenceGrant
metadata:
  name: allow-owncloud
  namespace: owncloud
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: kube-system
  to:
    - group: ""
      kind: Service
      name: proxy
