branch/develop/owncloud/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: owncloud
  namespace: kube-system
spec:
  hostnames:
    - "owncloud.dev.misumi-sumi.com"
  parentRefs:
    - name: public-gateway
      namespace: kube-system
  rules:
    - backendRefs:
        - name: web
          namespace: owncloud
          port: 9100
